<resources>
    <string name="app_name">PetRehome</string>

    <!--    dilshan's Strings-->

    <string name="city_prompt">Select City</string>
    <string-array name="city_arrays">
        <item>Galle</item>
        <item>Colombo</item>
        <item>Kandy</item>
        <item>Hambanthota</item>
        <item>Kaluthara</item>
        <item>Mathara</item>
    </string-array>

    <string name="username_s">username</string>
    <string name="password_s">password</string>
    <string name="f_name_s">first name</string>
    <string name="l_name_s">last name</string>
    <string name="phone_s">phone number</string>
    <string name="email_s">email</string>
    <string name="district_s">district</string>
    <string name="city_s">city</string>
    <string name="createAccount">Create Account</string>
    <string name="loginAccount">Login</string>
    <string name="login_instead">Log in Instead</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="new_listing">New Listing</string>
    <string name="title">title</string>
    <string name="age">age</string>
    <string name="description">description</string>
    <string name="phone">phone</string>
    <string name="my_listings">My Listings</string>
    <string name="breed">Breed</string>
    <string name="age_CAP">Age</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="description_CAP">Description</string>
    <string name="publish_date">Publish Date :</string>
    <string name="email">Email :</string>
    <string name="moblie">Moblie :</string>
    <string name="send_message">Send Message</string>
    <string name="call">Call</string>
    <string name="send_email">Send Email</string>
    <string name="update_listing">Update Listing</string>
    <string name="publish">Publish</string>
    <string name="verify_now">Verify Now</string>
    <string name="verified_user">Verified User</string>
    <string name="unverified_user">Unverified User</string>
    <string name="create_profile">Create Profile</string>
    <string name="dog_walkers">Dog Walkers</string>


    <!--    dilshan's Strings-->


    <!--    Ramesh's Strings-->
    <string name="login">Login</string>
    <string name="uname">username</string>
    <string name="password">password</string>
    <string name="remeberme">Rember me</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="clickhere">Click here</string>
    <string name="noaccount">Do not have account?</string>
    <string name="signup">Sign up</string>
    <string name="newad">NEW AD</string>
    <string name="doginfo">Information About Dog</string>
    <string name="dogname">Name</string>
    <string name="dogage">Age</string>
    <string name="doggender">Gender</string>
    <string name="dogsize">Size</string>
    <string name="lostdate">Lost Date</string>
    <string name="uploaddogimages">upload up to 5 images</string>
    <string name="ownerinfo">Information About Owner</string>
    <string name="ownername">Name</string>
    <string name="ownercontact">Contact</string>
    <string name="ownermail">Email</string>
    <string name="location">Location</string>
    <string name="dogdes">Description about dog</string>
    <string name="dogbreed">Breed</string>
    <string name="publishad">Publsih Ad</string>
    <string name="editad">Edit AD</string>
    <string name="editbutton">Edit</string>
    <string name="dogtype">Type</string>
    <string name="ownername2">Owner</string>
    <string name="myadd">MY ADDS</string>
    <string name="cretatead">CREATE AD</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="myldads">My Lost Dogs Ads</string>
    <string name="ldnewad">New Ad</string>
    <string name="oname12">Owners\'s Name</string>
    <string name="onamen12">Owner\'s Name</string>
    <string name="owner11">Owner</string>
    <string name="myads">My Ads</string>
    <string name="lostdatedog">Lost Date</string>

    <!--    Ramesh's Strings-->

    <!--    Thilan 's Strings-->

    <string name="my_Daycare_listings">My Daycare Listings</string>
    <string name="new_daycare_listing">Create New Daycare Listing</string>
    <string name="update_Daycare_listing">Update Daycare Listing</string>
    <string name="price">Rs.1900</string>



    <!--    Thilan 's Strings end-->


</resources>