<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="user.Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="135dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_6sasda00" />

    <EditText
        android:id="@+id/reg_username_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/username_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_password_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/reg_password_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/password_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_fname_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username_txt" />

    <EditText
        android:id="@+id/reg_fname_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/f_name_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_lname_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_txt" />

    <EditText
        android:id="@+id/reg_lname_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/l_name_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_phone_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_fname_txt" />

    <EditText
        android:id="@+id/reg_phone_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/phone_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_email_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_lname_txt" />

    <EditText
        android:id="@+id/reg_email_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/email_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/district_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone_txt" />

    <Spinner
        android:id="@+id/district_spinner"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/spinner_box"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/city_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_txt"
        android:entries="@array/city_arrays"
        android:prompt="@string/city_prompt"

        />

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:background="@drawable/spinner_box"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/district_spinner"

        android:entries="@array/city_arrays"
        android:prompt="@string/city_prompt"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="588dp" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_blue"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/login_instead_btn"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_blue_border"
        android:text="@string/login_instead"
        android:textColor="@color/modern_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="27dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/district_spinner"
        app:layout_constraintEnd_toEndOf="@+id/district_spinner"
        app:layout_constraintTop_toTopOf="@+id/district_spinner"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@drawable/round_arrow_drop_down_20" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/city_spinner"
        app:layout_constraintEnd_toEndOf="@+id/city_spinner"
        app:layout_constraintTop_toTopOf="@+id/city_spinner"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/round_arrow_drop_down_20" />


</androidx.constraintlayout.widget.ConstraintLayout>