<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwhite"
    tools:context="LostDogs.DogLDListing">
    <ImageView
        android:id="@+id/LDhome_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imgdogedit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <TextView
        android:id="@+id/txteditad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="2dp"
        android:text="@string/newad"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgdogedit"
        app:layout_constraintVertical_bias="0.826" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="593dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btndes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txteditad">

        <TextView
            android:id="@+id/txtdoginfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/doginfo"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtdogname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/dogname"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdoginfo" />

        <EditText
            android:id="@+id/txtdogage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/dogage"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdogname" />

        <EditText
            android:id="@+id/txtdoggender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/doggender"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdogage" />

        <EditText
            android:id="@+id/txtdogsize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/dogsize"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdoggender" />

        <EditText
            android:id="@+id/txtdogbreed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/dogbreed"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdogsize" />

        <EditText
            android:id="@+id/txtlostdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/lostdate"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdogbreed" />

        <ImageView
            android:id="@+id/LDimageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pic"
            app:layout_constraintEnd_toStartOf="@+id/LDimageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlostdate"
            app:srcCompat="@drawable/pic"
            tools:srcCompat="@drawable/pic" />

        <ImageView
            android:id="@+id/LDimageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pic"
            app:layout_constraintEnd_toStartOf="@+id/LDimageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LDimageView3"
            app:layout_constraintTop_toBottomOf="@+id/txtlostdate"
            app:srcCompat="@drawable/pic"
            tools:srcCompat="@drawable/pic" />

        <ImageView
            android:id="@+id/LDimageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pic"
            app:layout_constraintEnd_toStartOf="@+id/LDimageView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LDimageView4"
            app:layout_constraintTop_toBottomOf="@+id/txtlostdate"
            app:srcCompat="@drawable/pic"
            tools:srcCompat="@drawable/pic" />

        <ImageView
            android:id="@+id/LDimageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LDimageView5"
            app:layout_constraintTop_toBottomOf="@+id/txtlostdate"
            app:srcCompat="@drawable/pic"
            tools:srcCompat="@drawable/pic" />

        <TextView
            android:id="@+id/txtupload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/uploaddogimages"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlostdate" />

        <EditText
            android:id="@+id/txtownername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/ownername"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtownerinfo" />

        <EditText
            android:id="@+id/txtcontact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/ownercontact"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtownername" />

        <EditText
            android:id="@+id/txtxemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/ownermail"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcontact" />

        <EditText
            android:id="@+id/txtxlocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtxemail" />

        <EditText
            android:id="@+id/txtdes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btndes"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/dogdes"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtxlocation" />

        <Button
            android:id="@+id/LDpublishbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_bg"
            android:text="@string/publish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdes" />

        <TextView
            android:id="@+id/txtownerinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/ownerinfo"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LDimageView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>