<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="user.Login">

    <EditText
        android:id="@+id/log_email_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:maxLength="50"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/email_s"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/log_password_txt"
        app:layout_constraintEnd_toEndOf="@+id/log_password_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/log_password_txt" />

    <EditText
        android:id="@+id/log_password_txt"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/password_s"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="439dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_blue"
        android:text="@string/loginAccount"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />
    <Button
        android:id="@+id/signin_instead"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_blue_border"
        android:text="Sign In Instead"
        android:textColor="@color/modern_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Forget Password?"
        app:layout_constraintStart_toStartOf="@+id/signin_instead"
        app:layout_constraintTop_toBottomOf="@+id/signin_instead" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:textColor="@color/black01"
        android:fontFamily="@font/segoe_bold"
        android:text="Log in"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/log_email_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <ImageView
        android:id="@+id/loging_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />


</androidx.constraintlayout.widget.ConstraintLayout>